partial migration effort

--- a/megatest.config
+++ b/megatest.config
@@ -15,7 +15,10 @@ launcher nbfake
 maxload 2.5
 
 [server]
-required yes
+# required yes
+delay-on-busy yes
+timeout 0.13
+server-query-threshold 300
 
 [disks]
 disk0 #{getenv MT_RUN_AREA_HOME}/runs
