--- a/runconfigs.config
+++ b/runconfigs.config
@@ -1,9 +1,10 @@
 [default]
-MTRUNNER   #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../utils/mtrunner}
+MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
 MTTESTDIR  #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/..}
 MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 
-[v1.60/15]
+[include local-test.config]
+[include ../local-test.config]
 
-[include atwork.config]
+[v1.60/15]
 
