Updated ignore-glob, fixed some vars in runconfigs and added auto-create directory to disks.

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -1,6 +1,6 @@
 [default]
 MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
-MTTESTDIR  #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/..}
+MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 
 [include local-test.config]
