--- a/megatest.config
+++ b/megatest.config
@@ -24,5 +24,5 @@ server-query-threshold 300
 disk0 #{getenv MT_RUN_AREA_HOME}/runs
 
 [include local.config]
-[include ../supplemental.config]
+[include ../supplemental.megatest.config]
 
