--- a/dep-tests/megatest.config
+++ b/dep-tests/megatest.config
@@ -15,7 +15,7 @@ home #{shell readlink -f $MT_RUN_AREA_HOME}
 parent #{shell readlink -f $MT_RUN_AREA_HOME/..}
 
 [setup]
-linktree #{get misc parent}/links
+linktree #{get misc parent}/dep_links
 max_concurrent_jobs 100000
 # It is possible (but not recommended) to override the rsync command used
 # to populate the test directories. For test development the following 
