--- a/megatest.config
+++ b/megatest.config
@@ -4,14 +4,10 @@ iteration TEXT
 
 [setup]
 linktree #{getenv MT_RUN_AREA_HOME}/links
-max_concurrent_jobs 100
+max_concurrent_jobs 2
 logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
-
-# For development use symlinks instead of full copy of file - easy to
-# edit files in the test run area
-testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
 
 [jobtools]
 # launcher #{shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
@@ -20,18 +16,8 @@ maxload 2.5
 
 [server]
 # required yes
-delay-on-busy yes
-timeout 0.13
-server-query-threshold 300
-
-[dashboard]
-pre-command  xterm -geometry 180x20 -e "
-post-command |& tee results.log ;echo Press any key to continue;bash -c 'read -n 1 -s'" &
-testsort -event_time
 
 [disks]
-disk0 #{getenv MT_RUN_AREA_HOME}/runs
+disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
 
 [include local.config]
-[include ../supplemental.megatest.config]
-
