Update Makefile to take subset of tests, added rerunclean test, move rerunclean links/runs

--- a/rerunclean/megatest.config
+++ b/rerunclean/megatest.config
@@ -15,7 +15,7 @@ home #{shell readlink -f $MT_RUN_AREA_HOME}
 parent #{shell readlink -f $MT_RUN_AREA_HOME/..}
 
 [setup]
-linktree #{get misc parent}/links
+linktree #{scheme (create-directory "#{get misc home}/links" #t)}
 max_concurrent_jobs 100000
 # It is possible (but not recommended) to override the rsync command used
 # to populate the test directories. For test development the following 
@@ -45,7 +45,7 @@ htmlviewercmd arora
 ## -or-
 ## name /path/to/area
 [disks]
-disk0 #{get misc parent}/runs
+disk0 #{scheme (create-directory "#{get misc home}/runs" #t)}
 
 #======================================================================
 # Machine flavors
