Updated itemmap test to reflect an existing real use case

--- a/itemmap/runconfigs.config
+++ b/itemmap/runconfigs.config
@@ -3,5 +3,8 @@
 # [DEPS/SPEED]
 
 [std/0]
-WAITON_SUBST Xwaiton
-TESTCASES test1 test2 test3
+WAITON_SUBST 1234
+TESTCASES_PREFIX testcase
+TESTCASES testcase1 testcase2 testcase3
+TESTITEMS item.1 item.2
+TESTXTRAS xtra.1 xtra.2
