Added another test to bigrun for better testing of itemwait

--- a/megatest.config
+++ b/megatest.config
@@ -9,6 +9,9 @@ logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
 
+# For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
+testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
+
 [jobtools]
 # launcher #{shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
 launcher nbfake
