--- a/megatest.config
+++ b/megatest.config
@@ -8,6 +8,7 @@ max_concurrent_jobs 200
 logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
+runtimelim 8m
 
 # For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
