Add timeouts for chained-waiton tests

--- a/chained-waiton/megatest.config
+++ b/chained-waiton/megatest.config
@@ -15,6 +15,7 @@ home #{shell readlink -f $MT_RUN_AREA_HOME}
 parent #{shell readlink -f $MT_RUN_AREA_HOME/..}
 
 [setup]
+runtimelim 5m
 linktree #{scheme (create-directory "#{get misc home}/links" #t)}
 max_concurrent_jobs 100000
 # It is possible (but not recommended) to override the rsync command used
