--- a/chained-waiton/runconfigs.config
+++ b/chained-waiton/runconfigs.config
@@ -3,4 +3,4 @@
 # [DEPS/SPEED]
 
 [std/0]
-TESTCASES item.0 item.1
+TESTCASES [system /bin/bash -c 'for x in $(seq 0 10); do echo -n "item.$x "; done']
