Add runtimelim to itemmap test

--- a/itemmap/megatest.config
+++ b/itemmap/megatest.config
@@ -16,6 +16,7 @@ parent #{shell readlink -f $MT_RUN_AREA_HOME/..}
 
 [setup]
 linktree #{scheme (create-directory "#{get misc home}/links" #t)}
+runtimelim 5m
 max_concurrent_jobs 100000
 # It is possible (but not recommended) to override the rsync command used
 # to populate the test directories. For test development the following 
