Added initial incarnation of itemmap table to chained-waiton

--- a/megatest.config
+++ b/megatest.config
@@ -25,3 +25,4 @@ maxload 2.5
 disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
 
 [include local.config]
+[include ../supplemental.megatest.config]
