--- a/runconfigs.config
+++ b/runconfigs.config
@@ -4,7 +4,9 @@ MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 
 [include local-test.config]
-[include ../suplemental.runconfigs.config]
+[include ../supplemental.runconfigs.config]
+
+# supplemental.runconfigs.config
 
 [v1.60/15]
 
