Update rerunclean test, update chained-waiton logpro rules, update itemmap testconfig

--- a/rerunclean/megatest.config
+++ b/rerunclean/megatest.config
@@ -65,3 +65,8 @@ arm hosts: cubian
 [jobtools]
 launcher nbfake
 maxload 2.0
+
+[validvalues]
+cleanrerun-states    KILLREQ,KILLED,UNKNOWN,INCOMPLETE,STUCK,NOT_STARTED
+cleanrerun-statuses  FAIL,INCOMPLETE,ABORT,CHECK
+
