--- a/rerunclean/runconfigs.config
+++ b/rerunclean/runconfigs.config
@@ -4,5 +4,5 @@
 
 [std/0]
 STATUS_PASS PASS WAIVED SKIP WARN
-STATUS_FAIL FAIL CHECK ABORT INCOMPLETE
+STATUS_FAIL FAIL CHECK ABORT INCOMPLETE UNKNOWN NOT_STARTED
 STATUS_LIST #{rget STATUS_PASS} #{rget STATUS_FAIL}
