runconfigs-tests: added test to validate rget status in -show-runconfigs and -list-targets

--- a/runconfig-tests/runconfigs.config
+++ b/runconfig-tests/runconfigs.config
@@ -11,3 +11,4 @@ RGET_DEF #{rget DEFAULT_VAL}
 RGET_ECHO_DEF [system echo INFO RGET DEFAULT_VAL #{rget DEFAULT_VAL}]
 RGET_SHELL_SET #{shell ls $MT_RUN_AREA_HOME/tests}
 RGET_SHELL_ECHO [system echo #{rget RGET_SHELL_SET}]
+RGET_LIST_TARGETS_FAIL [system $MT_RUN_AREA_HOME/scripts/valid-rget-arg "#{rget RGET_VAL}"]
