--- a/megatest.config
+++ b/megatest.config
@@ -24,5 +24,8 @@ maxload 2.5
 [disks]
 disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
 
+# removeme [system sleep 5] 
+# removeme #{ system sleep 6} #{ shell sleep 7} #{ scheme (thread-sleep! 8)}
+
 [include local.config]
 [include ../supplemental.megatest.config]
