Fixed couple issues with early filling in of fields and target

--- a/megatest.config
+++ b/megatest.config
@@ -2,6 +2,10 @@
 release TEXT
 iteration TEXT
 
+[testsection]
+release_value #{getenv release}
+target_value  #{getenv MT_TARGET}
+
 [setup]
 linktree #{getenv MT_RUN_AREA_HOME}/links
 max_concurrent_jobs 3
