add archive template to megatest.config

--- a/megatest.config
+++ b/megatest.config
@@ -8,7 +8,7 @@ target_value  #{getenv MT_TARGET}
 
 [setup]
 linktree #{getenv MT_RUN_AREA_HOME}/links
-max_concurrent_jobs 3
+max_concurrent_jobs 2
 logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
@@ -30,6 +30,25 @@ disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
 
 # removeme [system sleep 5] 
 # removeme #{ system sleep 6} #{ shell sleep 7} #{ scheme (thread-sleep! 8)}
+[archive]
+
+# where to get bup executable
+# bup /path/to/bup
+
+# use machines of these flavor
+useflavors plain
+targsize 2G
+
+# minimum space required on an archive disk before allowing archiving to start (MB)
+minspace 10
+
+[archive-disks]
+
+# Archives will be organised under these paths like this:
+#  <testsuite>/<creationdate>
+# Within the archive the data is structured like this:
+#  <target>/<runname>/<test>/
+disk0 /mfs/tmp/archive
 
 [include local.config]
 [include ../supplemental.megatest.config]
