Added run stats table and functions

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -10,3 +10,6 @@ MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 
 [v1.60/15]
 
+[v1.60/28_dave]
+PATH /p/foundry/env/pkgs/logpro/1.11/bin:$PATH
+
