--- a/nested_mt/megatest.config
+++ b/nested_mt/megatest.config
@@ -14,4 +14,4 @@ useshell yes
 launcher nbfind
 
 [disks]
-disk0 #{getenv MT_RUN_AREA_HOME}/runs
+disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs" #t)}
