Removed nodot from megatest.config and removed unnecessary waitons from fullrun and dependency tests

--- a/megatest.config
+++ b/megatest.config
@@ -13,6 +13,7 @@ logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
 runtimelim 8m
+# nodot 
 
 # For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
