Added example tokens to megatest.config

--- a/megatest.config
+++ b/megatest.config
@@ -14,6 +14,9 @@ logviewer (%MTCMD%) 2> /dev/null > /dev/null
 htmlviewercmd arora
 runtimelim 8m
 # nodot 
+# minspace 10000000000000000000
+# dbdir-space-required 10000000000000000000
+# free-space-script echo 1
 
 # For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
