Cleaned up tests, correctly use the test run dir for sub megatest runs. Added beginnings of more parallel make

--- a/fslsync/megatest.config
+++ b/fslsync/megatest.config
@@ -14,6 +14,7 @@ linktree #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/fslsynclinks}
 [jobtools]
 useshell yes
 launcher nbfind
+maxload 2.0
 
 # As you run more tests you may need to add additional disks, the names are arbitrary but must be unique
 [disks]
