--- a/fullrun/megatest.config
+++ b/fullrun/megatest.config
@@ -234,6 +234,7 @@ disk0 /tmp/#{getenv USER}/adisk1
 
 # Uncomment these to emulate a job queue with a long time (look in bin/sleeprunner for the time)
 [jobtools]
+maxload 2.0
 launcher #{scheme (case (string->symbol (conc (getenv "datapath"))) \
                          ((none) "nbfake") \
                          ((openlava) "bsub -o $MT_LINKTREE/$MT_TARGET/$MT_RUNNAME.$MT_TESTNAME-$MT_ITEM_PATH.log") \
