--- a/nested_mt/megatest.config
+++ b/nested_mt/megatest.config
@@ -12,6 +12,7 @@ port 8090
 [jobtools]
 useshell yes
 launcher nbfind
+maxload 2.0
 
 [disks]
 disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs" #t)}
