--- a/simplerun/megatest.config
+++ b/simplerun/megatest.config
@@ -22,6 +22,7 @@ state start end completed
 [jobtools]
 useshell yes
 launcher nbfind
+maxload 2.0
 
 # You can override environment variables for all your tests here
 [env-override]
