--- a/installall/megatest.config
+++ b/installall/megatest.config
@@ -12,6 +12,7 @@ testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TES
 [jobtools]
 useshell yes
 launcher nbfind
+maxload 2.0
 
 [env-override]
 EXAMPLE_VAR example value
