--- a/runconfigs.config
+++ b/runconfigs.config
@@ -13,3 +13,9 @@ MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 [v1.60/28_dave]
 PATH /p/foundry/env/pkgs/logpro/1.11/bin:$PATH
 
+# Include a file based on version of nover_eh
+# [nover_eh/testit]
+# Test by running: megatest -show-runconfig -dumpmode ini -target nover_eh/testit
+#
+[include #{getenv release}.dat]
+
