Added graph section to megatest.config

--- a/megatest.config
+++ b/megatest.config
@@ -2,6 +2,9 @@
 release TEXT
 iteration TEXT
 
+[graph]
+g1 sqlite3:../example.db alldat event_time var val stuff
+
 [testsection]
 release_value #{getenv release}
 target_value  #{getenv MT_TARGET}
