Added examples of setting button height and font size in dashboard, changed num rows

--- a/megatest.config
+++ b/megatest.config
@@ -59,3 +59,9 @@ disk0 /mfs/tmp/archive
 
 [include local.config]
 [include ../supplemental.megatest.config]
+
+[include test.ini]
+
+[dashboard]
+btn-height x12
+btn-fontsz 7
