Added more dashboard config examples

--- a/megatest.config
+++ b/megatest.config
@@ -63,5 +63,6 @@ disk0 /mfs/tmp/archive
 [include test.ini]
 
 [dashboard]
-btn-height x12
-btn-fontsz 7
+btn-height x14
+btn-fontsz 6
+cell-width 100
