Added test view for demoing user views

--- a/megatest.config
+++ b/megatest.config
@@ -24,6 +24,9 @@ runtimelim 15m
 # For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
 
+# Uncomment to turn off timestamp based updating of dbdata
+# do-not-use-db-file-timestamps yes
+
 [jobtools]
 # launcher #{ shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
 launcher nbfake
