Added hint on how to compile to .so for user tabs

--- a/.mtviews.config
+++ b/.mtviews.config
@@ -4,3 +4,10 @@ source  test-view.scm
 viewgen test-view-gen
 updater test-view-updater
 
+
+[testviews2]
+type    external
+source  test-view.so
+viewgen test-view-gen
+updater test-view-updater
+
