--- a/.mtviews.config
+++ b/.mtviews.config
@@ -5,9 +5,9 @@ viewgen test-view-gen
 updater test-view-updater
 
 
-[testviews2]
-type    external
-source  test-view.so
-viewgen test-view-gen
-updater test-view-updater
+# [testviews2]
+# type    external
+# source  test-view.so
+# viewgen test-view-gen
+# updater test-view-updater
 
