--- a/runconfigs.config
+++ b/runconfigs.config
@@ -17,5 +17,8 @@ PATH /p/foundry/env/pkgs/logpro/1.11/bin:$PATH
 # [nover_eh/testit]
 # Test by running: megatest -show-runconfig -dumpmode ini -target nover_eh/testit
 #
+
 [include #{getenv release}.dat]
+[default]
+PATH #{rget MTPATH}:#{getenv PATH}
 
