--- a/runconfigs.config
+++ b/runconfigs.config
@@ -2,6 +2,7 @@
 MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
 MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
+# NBFAKE_HOST plxcas130
 
 [include local-test.config]
 [include ../supplemental.runconfigs.config]
