Made the example user view more interesting

--- a/megatest.config
+++ b/megatest.config
@@ -26,6 +26,8 @@ testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TES
 
 # Uncomment to turn off timestamp based updating of dbdata
 # do-not-use-db-file-timestamps yes
+# Uncomment to keep megatest.db updated.
+# megatest-db x
 
 [jobtools]
 # launcher #{ shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
