Changed inter-test launch time to 25 seconds to allow running the testsuite on low-end machines

--- a/megatest.config
+++ b/megatest.config
@@ -28,6 +28,7 @@ testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TES
 # do-not-use-db-file-timestamps yes
 # Uncomment to keep megatest.db updated.
 # megatest-db x
+launch-delay 25
 
 [jobtools]
 # launcher #{ shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
