switch to rpc, worry about http fails later

--- a/fullrun/megatest.config
+++ b/fullrun/megatest.config
@@ -149,8 +149,8 @@ MYRUNNAME2 /this/is/[system echo $MT_RUNNAME]/my/runname
 # force use of server always
 # required yes
 
-# Use http instead of direct filesystem access
-transport http
+# Use rpc instead of direct filesystem access
+transport rpc
 # transport fs
 # transport nmsg
 
