--- a/speedtest/megatest.config
+++ b/speedtest/megatest.config
@@ -4,7 +4,8 @@ fsname TEXT
 datapath TEXT
 
 [setup]
-transport #{scheme (if (getenv "USEHTTP") "http" "fs")}
+#transport #{scheme (if (getenv "USEHTTP") "http" "fs")}
+transport rpc
 
 max_concurrent_jobs 50
 
