--- a/mintest/megatest.config
+++ b/mintest/megatest.config
@@ -4,7 +4,7 @@ X TEXT
 [setup]
 max_concurrent_jobs 50
 linktree #{getenv MT_RUN_AREA_HOME}/linktree
-transport http
+transport rpc
 
 [server]
 port 8090
