Create continuous integration flow

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -3,6 +3,9 @@ MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
 MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 # NBFAKE_HOST plxcas130
+CHICKEN_PATH_BASE /opt/chicken
+CHICKEN_VERSIONS 4.10 4.11rc2
+MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
 
 [include local-test.config]
 [include ../supplemental.runconfigs.config]
