Integration test running now, polish needed ....

--- a/megatest.config
+++ b/megatest.config
@@ -72,3 +72,6 @@ disk0 /mfs/tmp/archive
 # btn-height x14
 # btn-fontsz 6
 # cell-width 100
+
+# Test junk
+[junk] PLATFORM_NAME [system echo $(lsb_release -sri|tr "\n" "-")$(hostname)]
