Committing automation merge of  into trunk

--- a/megatest.config
+++ b/megatest.config
@@ -74,4 +74,5 @@ disk0 /mfs/tmp/archive
 # cell-width 100
 
 # Test junk
-[junk] PLATFORM_NAME [system echo $(lsb_release -sri|tr "\n" "-")$(hostname)]
+[junk]
+PLATFORM_NAME [system echo $(lsb_release -sri|tr "\n" "-")$(hostname)]
