Fixed various and sundry issues...

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -1,8 +1,10 @@
 [default]
 MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
 MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
-MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
-# NBFAKE_HOST plxcas130
+
+# DO NOT OVERRIDE MTPATH! THIS QA NEEDS TO BE ABLE TO CONTROL THE VALUE OF MTPATH!
+# MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
+
 CHICKEN_PATH_BASE /opt/chicken
 CHICKEN_VERSIONS 4.10 4.11rc2
 MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
@@ -14,15 +16,10 @@ MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
 
 [v1.60/15]
 
-[v1.60/28_dave]
-PATH /p/foundry/env/pkgs/logpro/1.11/bin:$PATH
-
 # Include a file based on version of nover_eh
 # [nover_eh/testit]
 # Test by running: megatest -show-runconfig -dumpmode ini -target nover_eh/testit
 #
 
 [include #{getenv release}.dat]
-[default]
-PATH #{rget MTPATH}:#{getenv PATH}
 
