Removed chicken 4.11rc2 from versions to test

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -6,7 +6,8 @@ MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 # MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
 
 CHICKEN_PATH_BASE /opt/chicken
-CHICKEN_VERSIONS 4.10 4.11rc2
+CHICKEN_VERSIONS 4.10
+# 4.11rc2 <= has problems!
 MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
 
 [include local-test.config]
