--- a/megatest.config
+++ b/megatest.config
@@ -68,7 +68,7 @@ disk0 /mfs/tmp/archive
 
 [include test.ini]
 
-[dashboard]
-btn-height x14
-btn-fontsz 6
-cell-width 100
+# [dashboard]
+# btn-height x14
+# btn-fontsz 6
+# cell-width 100
