Made max jobs a function of num cores

--- a/megatest.config
+++ b/megatest.config
@@ -11,7 +11,7 @@ target_value  #{getenv MT_TARGET}
 
 [setup]
 linktree #{getenv MT_RUN_AREA_HOME}/links
-max_concurrent_jobs 4
+max_concurrent_jobs #{scheme (max (- (common:get-num-cpus #f) 2) 1)}
 logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
