more cpu based config values

--- a/fullrun/configs/mt_include_1.config
+++ b/fullrun/configs/mt_include_1.config
@@ -1,6 +1,6 @@
 [setup]
 # exectutable /path/to/megatest
-max_concurrent_jobs 250
+max_concurrent_jobs #{scheme (* 2 (common:get-num-cpus #f))}
 
 linktree #{getenv MT_RUN_AREA_HOME}/tmp/mt_links
 
