shorter startup delays

--- a/fullrun/megatest.config
+++ b/fullrun/megatest.config
@@ -44,6 +44,7 @@ incomplete-timeout 1
 
 # wait for runs to completely complete. yes, anything else is no
 run-wait yes
+launch_delay 1
 
 # If set to "default" the old code is used. Otherwise defaults to 200 or uses
 # numeric value given.
