--- a/simplerun/megatest.config
+++ b/simplerun/megatest.config
@@ -5,6 +5,7 @@ RELEASE TEXT
 [setup]
 # Adjust max_concurrent_jobs to limit how much you load your machines
 max_concurrent_jobs 50
+launch_delay 1
 
 # Uncomment this to make the in-mem db into a disk based db (slower but good for debug)
 # be aware that some unit tests will fail with this due to persistent data
