--- a/speedtest/megatest.config
+++ b/speedtest/megatest.config
@@ -6,6 +6,7 @@ datapath TEXT
 [setup]
 #transport #{scheme (if (getenv "USEHTTP") "http" "fs")}
 transport rpc
+launch_delay 1
 
 max_concurrent_jobs 50
 
