--- a/dep-tests/megatest.config
+++ b/dep-tests/megatest.config
@@ -22,6 +22,7 @@ max_concurrent_jobs 100000
 # example can be useful
 #
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
+launch_delay 0
 
 # or for hard links
 
