--- a/fslsync/megatest.config
+++ b/fslsync/megatest.config
@@ -9,6 +9,7 @@ max_concurrent_jobs 50
 
 # This is your link path, you can move it but it is generally better to keep it stable
 linktree #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/fslsynclinks}
+launch_delay 0
 
 # Job tools are more advanced ways to control how your jobs are launched
 [jobtools]
