--- a/listruns-tests/megatest.config
+++ b/listruns-tests/megatest.config
@@ -23,6 +23,7 @@ max_concurrent_jobs 100000
 # example can be useful
 #
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
+launch_delay 1
 
 # or for hard links
 
