Multiple things fixed, buildmt now working again

--- a/std-items.config
+++ b/std-items.config
@@ -1,5 +1,9 @@
 [requirements]
 waiton buildmt
 
+[items]
+CHICKEN_VERSION #{getenv CHICKEN_VERSIONS}
+
 [pre-launch-env-vars]
 MTPATH $MT_LINKTREE/$MT_TARGET/$MT_RUNNAME/buildmt/megatest/bin
+
