--- a/std-items.config
+++ b/std-items.config
@@ -5,5 +5,5 @@ waiton buildmt
 CHICKEN_VERSION #{getenv CHICKEN_VERSIONS}
 
 [pre-launch-env-vars]
-MTPATH $MT_LINKTREE/$MT_TARGET/$MT_RUNNAME/buildmt/megatest/bin
+MTPATH $MT_LINKTREE/$MT_TARGET/$MT_RUNNAME/buildmt/$MT_ITEMPATH/megatest/bin
 
