Updated commit to reflect single level hierarcy

--- a/std-items.config
+++ b/std-items.config
@@ -1,6 +1,9 @@
 [requirements]
 waiton buildmt
 
+# If you add a level of iteration then tests buildmt and commit must be 
+# updated appropriately
+#
 [items]
 CHICKEN_VERSION #{getenv CHICKEN_VERSIONS}
 
