Added example of scriptinc

--- a/megatest.config
+++ b/megatest.config
@@ -67,6 +67,7 @@ minspace 10
 #  <target>/<runname>/<test>/
 disk0 /mfs/tmp/archive
 
+[nada]
 [include local.config]
 [include ../supplemental.megatest.config]
 
@@ -80,3 +81,15 @@ disk0 /mfs/tmp/archive
 # Test junk
 [junk]
 PLATFORM_NAME [system echo $(lsb_release -sri|tr "\n" "-")$(hostname)]
+MTRAH #{rp #{mtrah ..}}
+MTRAH2 #{rp #{mtrah ../foobar}}
+RP #{rp ..}
+LS #{sh ls}
+LS2 #{shell ls}
+LS3 #{system ls > /dev/null}
+SCM #{scm (or *toppath* (get-environment-variable "MT_RUN_AREA_HOME"))}
+SV #{g disks disk0}
+
+[scriptinc scripts/test-scriptinc.sh]
+
+
