Added tconfdisks test (not passing 100% yet), made test start delay sensitive to num cpus

--- a/megatest.config
+++ b/megatest.config
@@ -24,14 +24,10 @@ runtimelim 25m
 # For easy debugging. DO NOT USE IN PRODUCTION CONFIG FILE!
 testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
 
-# Uncomment to turn off timestamp based updating of dbdata
-# do-not-use-db-file-timestamps yes
-# Uncomment to keep megatest.db updated.
-# megatest-db x
-launch-delay 15
+# on machines with less than 4 cpus delay 15 seconds between starting jobs
+launch-delay #{scheme (if (<= (common:get-num-cpus #f) 4) 15 0)}
 
 [jobtools]
-# launcher #{ shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
 launcher nbfake
 maxload 1.5
 
