Got tconfig test to work with multi-host

--- a/megatest.config
+++ b/megatest.config
@@ -11,7 +11,7 @@ target_value  #{getenv MT_TARGET}
 
 [setup]
 linktree #{getenv MT_RUN_AREA_HOME}/links
-max_concurrent_jobs #{scheme (max (- (common:get-num-cpus #f) 2) 1)}
+max_concurrent_jobs #{scheme (max (common:get-num-cpus #f) 2)}
 logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
@@ -35,7 +35,7 @@ maxload 1.5
 # required yes
 
 [disks]
-disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
+disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs" #t)}
 
 # removeme [system sleep 5] 
 # removeme #{ system sleep 6} #{ shell sleep 7} #{ scheme (thread-sleep! 8)}
