Runconfig updates to exercise the patterned targets

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -17,8 +17,6 @@ MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
 
 # supplemental.runconfigs.config
 
-[v1.60/15]
-
 # Include a file based on version of nover_eh
 # [nover_eh/testit]
 # Test by running: megatest -show-runconfig -dumpmode ini -target nover_eh/testit
@@ -26,6 +24,18 @@ MEGATEST_FOSSIL_FILE $HOME/fossils/megatest.fossil
 
 [include #{getenv release}.dat]
 
-[v1.6%/%/dev]
+
+[Another/One/Here]
+VAR VAL1
+
+[v1.60/15/dev]
+FOO is foo
+
+[v1.60/15/%]
+
+[/v1.6.*dev/]
 QUICKPATT %
+
+[/v1.60/.*/]
+JUNK from wildcard v1.60/%
 
