Added example of pg entry in config

--- a/megatest.config
+++ b/megatest.config
@@ -96,3 +96,5 @@ SV #{g disks disk0}
 fullrun ../tests/fullrun
 
 
+[ext-sync]
+# pgdb dbtype:pg host:localhost dbname:mtest user:username password:MyPassword
