--- a/megatest.config
+++ b/megatest.config
@@ -9,6 +9,11 @@ testsuite_mode TEXT
 [graph]
 g1 sqlite3:../example.db alldat event_time var val stuff
 
+[ext-sync]
+pgdbex dbtype:pg host:localhost dbname:mtest user:mega password:testy
+# NOTE: sqlite3 is not initialized with schema. 
+sqex   dbtype:sqlite3 dbname:/tmp/example.db
+
 [testsection]
 release_value #{getenv release}
 target_value  #{getenv MT_TARGET}
