Set timeout for servers to 0.01 hours

--- a/dep-tests/megatest.config
+++ b/dep-tests/megatest.config
@@ -36,6 +36,8 @@ logviewer (%MTCMD%) 2> /dev/null > /dev/null
 #
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
+[server]
+timeout 0.01
 
 [env-override]
 # MT_XTERM_CMD overrides the terminal command
