--- a/fdktestqa/testqa/megatest.config
+++ b/fdktestqa/testqa/megatest.config
@@ -1,3 +1,6 @@
+[server]
+timeout 0.01
+
 [setup]
 testcopycmd cp --remove-destination -rlv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TEST_TARG_PATH/mt_launch.log 2>> TEST_TARG_PATH/mt_launch.log
 # launchwait no
