--- a/fslsync/megatest.config
+++ b/fslsync/megatest.config
@@ -11,6 +11,9 @@ max_concurrent_jobs 50
 linktree #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/fslsynclinks}
 launch_delay 0
 
+[server]
+timeout 0.01
+
 # Job tools are more advanced ways to control how your jobs are launched
 [jobtools]
 useshell yes
