--- a/megatest.config
+++ b/megatest.config
@@ -46,6 +46,8 @@ maxload 1.5
 
 [server]
 # required yes
+# NOTE: timeout is in hours
+timeout 0.01
 
 [disks]
 disk0 #{scheme (create-directory "#{getenv MT_RUN_AREA_HOME}/runs")}
@@ -103,3 +105,14 @@ fullrun ../tests/fullrun
 
 [ext-sync]
 # pgdb dbtype:pg host:localhost dbname:mtest user:username password:MyPassword
+
+[env-overrides]
+SOMEDUMBVAR yes
+
+[just-testing]
+# 
+checkif  #{scheme (getenv "MT_TARGET")}
+runcount #{scheme (if (and (args:get-arg "-run")(getenv "MT_TARGET")(getenv "SOMEDUMBRUNVAR")) \
+                      (system "xterm &") \
+                      (conc (getenv "MT_TARGET") ))}
+
