--- a/simplerun/megatest.config
+++ b/simplerun/megatest.config
@@ -25,6 +25,9 @@ useshell yes
 launcher nbfind
 maxload 2.0
 
+[server]
+timeout 0.01
+
 # You can override environment variables for all your tests here
 [env-override]
 EXAMPLE_VAR example value
