--- a/dynamic-waiton-example/megatest.config
+++ b/dynamic-waiton-example/megatest.config
@@ -37,6 +37,9 @@ logviewer (%MTCMD%) 2> /dev/null > /dev/null
 # htmlviewercmd firefox -new-window 
 htmlviewercmd arora
 
+[server]
+timeout 0.01
+
 [env-override]
 # MT_XTERM_CMD overrides the terminal command
 # MT_XTERM_CMD xterm -bg lightgreen -fg black
