Added no-cache to megatest.config (just for testing)

--- a/megatest.config
+++ b/megatest.config
@@ -39,6 +39,8 @@ testcopycmd cp --remove-destination -rsv TEST_SRC_PATH/. TEST_TARG_PATH/. >> TES
 # megatest-db x
 launch-delay 5
 
+use-cache no
+
 [jobtools]
 # launcher #{ shell if which bsub > /dev/null;then echo bsub;else echo nbfake;fi}
 launcher nbfake
