--- a/tests/env-pollution/epra/runconfigs.config
+++ b/tests/env-pollution/epra/runconfigs.config
@@ -1,5 +1,6 @@
 [default]
 ALLTESTS see this variable
+FAIR FAIR
 
 # Your variables here are grouped by targets [SYSTEM/RELEASE]
 [SYSTEM_val/RELEASE_val]
