--- a/tests/env-pollution/epra/megatest.config
+++ b/tests/env-pollution/epra/megatest.config
@@ -13,7 +13,7 @@ launch_delay 1
 # tmpdb /tmp
 
 # This is your link path, you can move it but it is generally better to keep it stable
-linktree #{getenv MT_RUN_AREA_HOME}/../simplelinks
+linktree #{getenv MT_RUN_AREA_HOME}/links
 
 # Valid values for state and status for steps, NB// It is not recommended you use this
 [validvalues]
@@ -31,4 +31,4 @@ EXAMPLE_VAR example value
 
 # As you run more tests you may need to add additional disks, the names are arbitrary but must be unique
 [disks]
-disk0 #{getenv MT_RUN_AREA_HOME}/../simpleruns
+disk0 #{getenv MT_RUN_AREA_HOME}/runarea
