--- a/tests/env-pollution/epra/runconfigs.config
+++ b/tests/env-pollution/epra/runconfigs.config
@@ -1,6 +1,8 @@
 [default]
 ALLTESTS see this variable
-FAIR FAIR
+PATHADDER /whatever/bin
+PATH #{getenv PATH}:#{getenv PATHADDER}
+
 
 # Your variables here are grouped by targets [SYSTEM/RELEASE]
 [SYSTEM_val/RELEASE_val]
