reproduced env pollution with cache

--- a/tests/env-pollution/epra/Makefile
+++ b/tests/env-pollution/epra/Makefile
@@ -1,18 +1,21 @@
+RUNNAME=go
+TARGET=SYSTEM_val/RELEASE_val
 
 dashboard:
 	dashboard -rows 25 &
 
 run:
-	megatest -run -testpatt % -target SYSTEM_val/RELEASE_val -runname go -clean-cache
+	./wait_kickoff $(TARGET) $(RUNNAME) test1/1 kickoff  &> kickoff.log &
+	megatest -run -run-wait -testpatt % -target $(TARGET) -runname $(RUNNAME) -clean-cache
 
 
 reset:
 	./kill_megatests_in_toppath
-	rm -rf runarea/SYSTEM_val
-	rm -rf links/SYSTEM_val
+	rm -rf runarea/$(TARGET)
+	rm -rf links/$(TARGET)
 	rm -rf megatest.db
-	rm -rf lt/.db
 	rm -rf lt
 	rm -rf /tmp/$(USER)/megatest_localdb/epra/`readlink -f . | tr "/" "."`/*
 	rm -rf logs
+	rm -rf *.log
 	mkdir logs
