--- a/tests/env-pollution/epra/megatest.config
+++ b/tests/env-pollution/epra/megatest.config
@@ -28,6 +28,7 @@ maxload 2.0
 # You can override environment variables for all your tests here
 [env-override]
 EXAMPLE_VAR example value
+PATH #{getenv PATH}:#{getenv PATHADDER}
 
 # As you run more tests you may need to add additional disks, the names are arbitrary but must be unique
 [disks]
