--- a/tests/env-pollution/epra/runconfigs.config
+++ b/tests/env-pollution/epra/runconfigs.config
@@ -3,6 +3,7 @@ ALLTESTS see this variable
 PATHADDER /whatever/bin
 
 
+EVALED #{getenv FAIR}:is-fair
 
 # Your variables here are grouped by targets [SYSTEM/RELEASE]
 [SYSTEM_val/RELEASE_val]
