Example of sync to sqlite3 db (as opposed to existing postgresql examples).

--- a/megatest.config
+++ b/megatest.config
@@ -107,14 +107,16 @@ fullrun ../tests/fullrun
 
 [ext-sync]
 # pgdb dbtype:pg host:localhost dbname:mtest user:username password:MyPassword
+sqdb   dbtype:sqlite3 dbname:/tmp/#{getenv USER}/example.db
 
 [env-overrides]
 SOMEDUMBVAR yes
 
 [just-testing]
-# 
+ 
 checkif  #{scheme (getenv "MT_TARGET")}
 runcount #{scheme (if (and (args:get-arg "-run")(getenv "MT_TARGET")(getenv "SOMEDUMBRUNVAR")) \
                       (system "xterm &") \
                       (conc (getenv "MT_TARGET") ))}
+
 
