Don't use nbfind, use nbfake

--- a/simplerun/megatest.config
+++ b/simplerun/megatest.config
@@ -22,7 +22,7 @@ state start end completed
 # Job tools are more advanced ways to control how your jobs are launched
 [jobtools]
 useshell yes
-launcher nbfind
+launcher nbfake
 maxload 2.0
 
 [server]
