Fixed false errors in fullrun test

--- a/fullrun/megatest.config
+++ b/fullrun/megatest.config
@@ -44,7 +44,9 @@ incomplete-timeout 1
 
 # wait for runs to completely complete. yes, anything else is no
 run-wait yes
-launch_delay 1
+# might have to make launch_delay dependent on system data such as number of cpus. It is very annoying to slow down the QA run when on an 8 cpu machine 
+# launch_delay 1
+launch_delay 0
 
 # If set to "default" the old code is used. Otherwise defaults to 200 or uses
 # numeric value given.
