fix for viewscreen megatest bin dir pollution

--- a/megatest.config
+++ b/megatest.config
@@ -83,7 +83,10 @@ disk0 /mfs/tmp/archive
 
 [include test.ini]
 
-#[dashboard]
+[dashboard]
+pre-command export CMD='
+post-command ';xterm -geometry 180x20 -e "(echo;echo -n START:;date +ww%U.%w-%H:%M:%S;echo;echo $CMD;echo;$CMD)|& \
+              tee -a #{getenv MT_RUN_AREA_HOME}/runlog-`date +ww%U.%w-%H:%M`.log;echo Press any key to continue;bash -c 'read -n 1 -s'" &
 # btn-height x14
 # btn-fontsz 6
 # cell-width 100
