Set up MTPATH default

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -5,6 +5,7 @@ MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 
 # DO NOT OVERRIDE MTPATH! THIS QA NEEDS TO BE ABLE TO CONTROL THE VALUE OF MTPATH!
 # MTPATH     #{shell readlink -f #{getenv MT_RUN_AREA_HOME}/../../bin}
+MTPATH #{shell dirname $(type -p megatest)}
 
 CHICKEN_PATH_BASE /opt/chicken
 # CHICKEN_VERSIONS 4.9.0.1_for_14.04
