added output-tests to GOODTESTS

--- a/runconfigs.config
+++ b/runconfigs.config
@@ -1,5 +1,5 @@
 [default]
-GOODTESTS runconfig-tests testpatt rollup envvars rerunclean listruns-tests itemwait dependencies testpatt_envvar toprun fullrun ro_test tconfdisks env-pollution env-pollution-usecacheno skip-on-fileexists itemwait-simple
+GOODTESTS runconfig-tests testpatt rollup envvars rerunclean listruns-tests itemwait dependencies testpatt_envvar toprun fullrun ro_test tconfdisks env-pollution env-pollution-usecacheno skip-on-fileexists itemwait-simple output-tests
 MTRUNNER   #{getenv MT_RUN_AREA_HOME}/scripts/mtrunner
 MTTESTDIR  #{getenv MT_RUN_AREA_HOME}
 
