Proper fields spec

--- a/megatest.config
+++ b/megatest.config
@@ -1,7 +1,9 @@
 [fields]
-release TEXT
-iteration TEXT
-testsuite_mode TEXT
+release TEXT DEFAULT 'v0.0'
+iteration TEXT DEFAULT 'tip'
+testsuite_mode TEXT DEFAULT 'dev'
+# area_name TEXT DEFAULT 'ext-tests'
+
 # testsuite_mode options
 #  dev   => use for interactive testing
 #  integ => use for the automated integration test
